# verbatim-memory-in-NLMs

./: .gitignore  MANIFEST.in  README.md  README_pkg.md  awd-lstm_env.yml  dataset.py  dataset_script.sh  environment.yml  experiment.py  generate.py  gpt2_surprisal.py  main_env.yml  make_figs.py  make_gpt2_generate_scr.py  make_gpt2_ngram_scr.py  make_gpt2_surprisal_scr.py  make_rnn_ngram_scr.py  make_rnn_surprisal_scr.py  make_stimuli.py  make_surprisal_scr.py  minimal_env.yml  mkdocs.yml  myutils.py  next_word_prediction.py  outputs4dataframe.py  paths.py  pathsconfig.toml  perplexity.py  prepare_transformer_inputs.py  prepare_transformer_inputs_script.sh  preprocess_and_merge_csvfiles.py  preprocess_wikitext103.py  proj_paths.py  pyproject.toml  random_lists.json  reqs.yml  reqs_pytorch1.3.yaml  reqs_pytorch1.3_cpu.yaml  reqs_pytorch1.6.yaml  reqs_pytorch1.6_cpu.yaml  (+61 more)
.circleci/: config.yml
data/: README.md  categorized_lists.json  categorized_lists.txt  categorized_lists_control.txt  categorized_lists_markers.txt  categorized_lists_permute.txt  categorized_lists_sce1_control.txt  categorized_lists_sce1_permute.txt  categorized_lists_sce1_repeat.txt  categorized_lists_sce1rnd_control.txt  categorized_lists_sce1rnd_permute.txt  categorized_lists_sce1rnd_permute_markers.txt  categorized_lists_sce1rnd_repeat.txt  categorized_lists_sce2_control.txt  categorized_lists_sce2_permute.txt  categorized_lists_sce2_repeat.txt  categorized_lists_sce3_control.txt  categorized_lists_sce3_permute.txt  categorized_lists_sce3_repeat.txt  get_word_pools.py  inputlists2tex.py  make_ngram_stimuli.sh  make_rnn_inputfiles.py  make_rnn_inputfiles_script.sh  make_stimuli.py  make_stimuli.sh  make_wordlists.py  ngram-categorized.json  ngram-distractors.json  ngram-random.json  ngram-random_lists.json  ngram-random_lists_sce1_repeat.txt  ngram-random_lists_sce1_repeat_markers.txt  ngram_random_lists_sce1_repeat.txt  ngram_random_lists_sce1_repeat_markers.txt  nouns_categorized.txt  prepare_transformer_inputs.py  prepare_transformer_inputs_script.sh  random_lists.json  random_lists.txt  (+31 more)
docs/: api.md  index.md
greene_scripts/: gpt2_40m_01-768-1024.config  gpt2_40m_03-768-1024.config  gpt2_40m_06-768-1024.config  gpt2_40m_12-768-1024.config  gpt2_40m_12-768-1024_b.config  gpt2_40m_12-768-1024_c.config  gpt2_40m_12-768-1024_d.config  gpt2_40m_12-768-1024_e.config  gpt2_80m_12-768-1024.config  model_train_params.tex  train_gpt2_script.scr
marcc_scripts/: run_gpt2_surprisal_ngramex_scripts.sh  run_gpt2_surprisal_scripts.sh  run_rnn_surprisal_ngramex_scripts.sh  run_rnn_surprisal_scripts.sh  script_gpt2_surprisal_sce1_permute_random.scr  script_gpt2_surprisal_sce1_repeat_random.scr  script_gpt2_surprisal_sce1rnd_permute_random.scr  script_gpt2_surprisal_sce2_control_categorized.scr  script_rnn_surprisal_sce1_permute_random.scr  script_rnn_surprisal_sce1_repeat_random.scr  script_rnn_surprisal_sce1rnd_control_random.scr  script_rnn_surprisal_sce2_repeat_random.scr  script_surp_gpt2_a-10_sce1_control_categorized.scr  script_surp_gpt2_a-10_sce1_control_random.scr  script_surp_gpt2_a-10_sce1_permute_categorized.scr  script_surp_gpt2_a-10_sce1_permute_random.scr  script_surp_gpt2_a-10_sce1_repeat_categorized.scr  script_surp_gpt2_a-10_sce1_repeat_ngram-categorized.scr  script_surp_gpt2_a-10_sce1_repeat_ngram-random.scr  (+166 more)
models/: README.md
(+861 files in other folders)
