[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wm_suite"
version = "0.0.1"
requires-python = ">=3.7"
dependencies = [
    "numpy == 1.21.2",
    "pandas == 1.2.4",
    "transformers == 4.6.1",
    "tqdm == 4.59.0",
    ]

[project.scripts]
wms_test_install = "wm_suite.test:test_install"

# this will build wheel as part of installation
[tool.universal.bdist_wheel]
universal = true

[tool.pytest.ini_options]
pythonpath = ["wm_suite", "data", "models"]
testpaths = "tests"
