[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wm_suite"
version = "0.0.1"
requires-python = ">=3.7"
dependencies = [
    "numpy == 1.21.2",
    "pandas == 1.2.4",
    "transformers == 4.6.1",
    "tqdm == 4.59.0",
    ]

[project.scripts]
wms_test_install = "wm_suite.cli.test:test_install"
wms_reproduce_set-size = "wm_suite.cli.reproduce_set_size:reproduce_set_size_experiment"
wms_preprocess_output = "wm_suite.preprocess_and_merge_csvfiles:main"
wms_download_data = "wm_suite.utils:download_data"

# this will build wheel as part of installation
[tool.universal.bdist_wheel]
universal = true

[tool.pytest.ini_options]
pythonpath = ["src", "src/wm_suite", "data", "models"]
testpaths = "tests"
addopts = "--ignore=tests/test_awd_lstm.py"
