[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wm_suite"
authors = [
    { name = "Kristijan Armeni" }
]
description = "A python test suite to evaluate language models on the short-term memory task introduced by Armeni et al, 2022 (https://aclanthology.org/2022.conll-1.28/)"
version = "0.0.2"
requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.21.2",
    "pandas >= 1.2.4",
    "torch >= 1.10.1",
    "transformers >= 4.6.1",
    "nltk >= 3.4.4",
    "matplotlib >= 3.4.2",
    "seaborn >= 0.11.1",
    "tqdm >= 4.59.0",
    "mosestokenizer >= 1.2.1",
    ]

[project.scripts]
wms_test_install = "wm_suite.cli.test:test_install"
wms_reproduce_set-size = "wm_suite.cli.reproduce_set_size:reproduce_set_size_experiment"
wms_preprocess_output = "wm_suite.preprocess_and_merge_csvfiles:main"
wms_download_data = "wm_suite.utils:download_data"
wms_download_data2 = "wm_suite.utils:download_data2"
wms_reproduce_figs_conll2022 = "wm_suite.viz.make_figures:main"

# this will build wheel as part of installation
[tool.universal.bdist_wheel]
universal = true

[tool.pytest.ini_options]
pythonpath = ["./", "src", "src/wm_suite", "data", "models"]
testpaths = "tests"
addopts = "--ignore=tests/test_awd_lstm.py"
