[metadata]
name = wm_suite
version = 0.0.1
author = Kristijan Armeni
author_email = kristijan.armeni@gmail.com
summary = A simple WM test suite for language models
description = TBA
description_content_type = text/markdown
long_description = file: README_pkg.md 
long_description_content_type = text/markdown

[options]
package_dir=
    =wm_suite
packages = find:

include_package_data = True

# specify dependencies
python_requires = >=3.7
install_requires = 
    numpy == 1.21.2
    pandas == 1.2.4
    transformers == 4.6.1
    tqdm == 4.59.0

[options.packages.find]
where = src

